# business-opportunities

./: .gitignore  README.md  pyproject.toml
configs/: constraints_schema.json
docs/: neo4j-spatial.txt
frontend/: package.json
frontend/src/app/api/query/: route.ts
frontend/src/components/: QueryInterface.tsx
frontend/src/lib/python/: executor.ts
frontend/src/types/: python.ts
notebooks/eda/: bgs.ipynb  sandag.ipynb
notebooks/starter/: SANDAG_connection.ipynb
notebooks/test/: block_group.test.ipynb  geometry.test.ipynb
queries/: test.txt
scripts/: populate.py  query.py
scripts/api/: main.py
scripts/api/services/: processor.py  query_processor.py
src/biz_opps.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/biz_opps/etl/: administrative_topology.py  block_groups.py  businesses.py  geoenrichment.py
src/biz_opps/neo4j/: cleanup.py  constraints.py  construction.py  helpers.py  spatial.py  validation.py
src/biz_opps/query/context/: doc_loader.py  schema_loader.py
src/biz_opps/query/cypher/: executor.py
src/biz_opps/query/interface/: query_engine.py
src/biz_opps/query/llm/: openai_client.py
src/biz_opps/query/visualization/: map_viewer.py
src/biz_opps/utils/: file.py  geometry.py  plot.py  postgres.py
